Remove workaround for missing LocalBorderBoxProperties.

This was added to prevent crashes. Let's remove it
now to see if those crashes were fixed, and to uncover
more failure cases, which may shed light on similar crash
bugs we cannot reproduce.

Bug: 708372
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I1e89c3fcc859af65d82c9945a14cbf5aac8ef8c8
Reviewed-on: https://chromium-review.googlesource.com/598452
Reviewed-by: Philip Rogers <pdr@chromium.org>
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#491548}
Former-commit-id: 47f019304a77cd50ce7b43c10a064e7f9dc8f34a